--- a/styleguide/source/assets/scss/05-pages/_page.scss
+++ b/styleguide/source/assets/scss/05-pages/_page.scss
@@ -3,6 +3,7 @@
   background: linear-gradient(rgba($white, .75%) 0%, $white 100%);
   position: relative;
   padding-top: 1em;
+  padding-bottom: 1px;
   
   // create shadow corner effect
   &:before {
